objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Complaint</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Exception Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LO Engagement</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agency_or_Non_Agency__c</fullName>
        <label>Agency or Non-Agency?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Agency</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Pre_Qualified_by_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Pre-Qualified by Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <label>Bank Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brokerage_Account__c</fullName>
        <label>Brokerage Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Accountable__c</fullName>
        <description>Field identifies what group is accountable for the reason behind the complaint</description>
        <label>Business Unit Accountable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>Acquisitions</fullName>
                </value>
                <value>
                    <fullName>HPT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Accountable_other__c</fullName>
        <description>Field identifies business area if "Other" is selected</description>
        <label>Business Unit Accountable (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin_Other__c</fullName>
        <description>Field identifies case origin if "Other" is selected</description>
        <inlineHelpText>How did complaint arrive to Unison?</inlineHelpText>
        <label>Case Origin (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit pull authorization</fullName>
                </value>
                <value>
                    <fullName>Personal info source request</fullName>
                </value>
                <value>
                    <fullName>Personal documents / SSN / Other sensitive info</fullName>
                </value>
                <value>
                    <fullName>"I want to see credit report"</fullName>
                </value>
                <value>
                    <fullName>I want to see appraisal</fullName>
                </value>
                <value>
                    <fullName>Prequalified then rejected</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Govt. Agency</fullName>
                </value>
                <value>
                    <fullName>"Attorney" or "Legal Action"</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
                <value>
                    <fullName>"Remove me from all contact lists"</fullName>
                </value>
                <value>
                    <fullName>Value dispute</fullName>
                </value>
                <value>
                    <fullName>Confusion about product</fullName>
                </value>
                <value>
                    <fullName>Pricing / fee ambiguity</fullName>
                </value>
                <value>
                    <fullName>"Multiple people told me different things"</fullName>
                </value>
                <value>
                    <fullName>Public defamation / slander</fullName>
                </value>
                <value>
                    <fullName>Contract-related issues</fullName>
                </value>
                <value>
                    <fullName>Unresponsiveness</fullName>
                </value>
                <value>
                    <fullName>Issue with third-party vendor</fullName>
                </value>
                <value>
                    <fullName>Request for manager</fullName>
                </value>
                <value>
                    <fullName>Request for new PS / TS</fullName>
                </value>
                <value>
                    <fullName>"Don't trust Unison"</fullName>
                </value>
                <value>
                    <fullName>UDAAP (misleading, unfair, predatory)</fullName>
                </value>
                <value>
                    <fullName>Privacy or Data Breach</fullName>
                </value>
                <value>
                    <fullName>I’ve asked multiple times to be removed</fullName>
                </value>
                <value>
                    <fullName>"Predatory, misleading, underdelivering product"</fullName>
                    <isActive>false</isActive>
                    <label>"Misleading / predatory product"; "Don't trust Unison"</label>
                </value>
                <value>
                    <fullName>BBB / Govt. Agency</fullName>
                    <isActive>false</isActive>
                    <label>BBB / Govt. Agency</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <defaultValue>if( $RecordType.Name = 'Complaint' ,'Unclassified','None')</defaultValue>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Authorization</fullName>
                </value>
                <value>
                    <fullName>Data Security</fullName>
                </value>
                <value>
                    <fullName>Declines</fullName>
                </value>
                <value>
                    <fullName>Legal / Regulatory</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Issue</fullName>
                </value>
                <value>
                    <fullName>Unison Personnel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Co-Applicant Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Case_Escalated_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint Case Escalated_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complaint_Case_Escalated_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint Case Escalated 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <description>Field identifies what type of complaint is being reported</description>
        <inlineHelpText>What is the consumer complaining about?</inlineHelpText>
        <label>Complaint Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repeated attempts to opt-out of marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing/Ad content</fullName>
                </value>
                <value>
                    <fullName>Denial</fullName>
                </value>
                <value>
                    <fullName>Credit Pull Unauthorized</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Appraisal/OAV Dispute</fullName>
                </value>
                <value>
                    <fullName>Delayed funds/Where are my funds</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Termination: MAD dispute</fullName>
                </value>
                <value>
                    <fullName>Termination: EAV dispute</fullName>
                </value>
                <value>
                    <fullName>Termination: RMA dispute</fullName>
                </value>
                <value>
                    <fullName>Personal info source request</fullName>
                </value>
                <value>
                    <fullName>Personal documents/SSN/Other sensitive info</fullName>
                </value>
                <value>
                    <fullName>Pricing/fee ambiguity</fullName>
                </value>
                <value>
                    <fullName>Contradictory communication</fullName>
                </value>
                <value>
                    <fullName>Contract-related issues</fullName>
                </value>
                <value>
                    <fullName>Issue with 3rd party vendor</fullName>
                </value>
                <value>
                    <fullName>System not working/broken</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Type_other__c</fullName>
        <description>Field identifies complaint if "Other" is selected</description>
        <label>Complaint Type (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Stage_relationship_owner__c</fullName>
        <description>Field identifies where in the funnel the consumer is for purposes of identifying responsible party / relationship owner</description>
        <label>Consumer Stage (relationship owner)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-funnel (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Lead/Opportunity (Sales)</fullName>
                </value>
                <value>
                    <fullName>Funded (HPT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Unison_Received_Complaint__c</fullName>
        <description>Date Unison received complaint from customer. Requested by Legal.</description>
        <inlineHelpText>Date Unison received complaint from customer.</inlineHelpText>
        <label>Date Unison Received Complaint.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Unison_Resolved_Complaint__c</fullName>
        <description>Field identifies the date Unison completed the complaint resolution process</description>
        <inlineHelpText>Date complaint process completed</inlineHelpText>
        <label>Date Unison Resolved Complaint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decline_Reasons__c</fullName>
        <label>Decline Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Loss_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Home_Value__c</fullName>
        <label>Estimated Home Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <label>Exception Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Back-End DTI Post-Funding</fullName>
                </value>
                <value>
                    <fullName>Mid FICO</fullName>
                </value>
                <value>
                    <fullName>LTV Post-Funding</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy/Foreclosure/Short Sale/Deed in Lieu</fullName>
                </value>
                <value>
                    <fullName>Non-Unison Appraisal</fullName>
                </value>
                <value>
                    <fullName>Mortgage Type</fullName>
                </value>
                <value>
                    <fullName>2+ Property Units</fullName>
                </value>
                <value>
                    <fullName>Homeowner Equity Post-Funding</fullName>
                </value>
                <value>
                    <fullName>Lien Position</fullName>
                </value>
                <value>
                    <fullName>Principal Residence</fullName>
                </value>
                <value>
                    <fullName>Non-US Resident Applicant/Co-Applicant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Default rate is high enough to warrant an escalate.</fullName>
                </value>
                <value>
                    <fullName>CLTV is greater than 80%.</fullName>
                </value>
                <value>
                    <fullName>DTI is greater than 65%.</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                    <isActive>false</isActive>
                    <label>Bankruptcy</label>
                </value>
                <value>
                    <fullName>CLTV is greater than 80%</fullName>
                    <isActive>false</isActive>
                    <label>CLTV is greater than 80%</label>
                </value>
                <value>
                    <fullName>DTI is greater than 65%</fullName>
                    <isActive>false</isActive>
                    <label>DTI is greater than 65%</label>
                </value>
                <value>
                    <fullName>Deed in Lieu</fullName>
                    <isActive>false</isActive>
                    <label>Deed in Lieu</label>
                </value>
                <value>
                    <fullName>Default rate is high enough to warrant an escalate</fullName>
                    <isActive>false</isActive>
                    <label>Default rate is high enough to warrant an escalate</label>
                </value>
                <value>
                    <fullName>FICO</fullName>
                    <isActive>false</isActive>
                    <label>FICO</label>
                </value>
                <value>
                    <fullName>Foreclosure</fullName>
                    <isActive>false</isActive>
                    <label>Foreclosure</label>
                </value>
                <value>
                    <fullName>Gift Funds</fullName>
                    <isActive>false</isActive>
                    <label>Gift Funds</label>
                </value>
                <value>
                    <fullName>Multi-Family Property</fullName>
                    <isActive>false</isActive>
                    <label>Multi-Family Property</label>
                </value>
                <value>
                    <fullName>Non-Occupant Co-Applicant</fullName>
                    <isActive>false</isActive>
                    <label>Non-Occupant Co-Applicant</label>
                </value>
                <value>
                    <fullName>Second/Vacation Home</fullName>
                    <isActive>false</isActive>
                    <label>Second/Vacation Home</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Back_End_DTI__c</fullName>
        <label>Expected Back End DTI</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_LTV__c</fullName>
        <label>Expected LTV</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FICO_Applicant__c</fullName>
        <label>Estimated FICO Applicant</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FICO_Co_Applicant__c</fullName>
        <label>Estimated FICO Co-Applicant</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greenlight_Decision__c</fullName>
        <label>Greenlight Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Greenlight_Decision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greenlight_ID__c</fullName>
        <label>Greenlight Inquiry ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenlight_Pricing__c</fullName>
        <label>Pricing</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greenlight_Reason__c</fullName>
        <label>Greenlight Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Greenlight_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greenlight_Version__c</fullName>
        <label>Greenlight Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeowner_Equity_Post_Funding__c</fullName>
        <label>Homeowner Equity Post-Funding</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Household_Monthly_Income__c</fullName>
        <label>Household Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Size__c</fullName>
        <label>Investment Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment__c</fullName>
        <label>Last Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lender</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lender Exception Requests</relationshipLabel>
        <relationshipName>Lender_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mortgage_Type__c</fullName>
        <label>Mortgage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amortizing</fullName>
                    <default>true</default>
                    <label>Amortizing</label>
                </value>
                <value>
                    <fullName>Non-amortizing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Cases</relationshipLabel>
        <relationshipName>Opportunity_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Assets__c</fullName>
        <label>Other Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Explanation__c</fullName>
        <label>Other Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Monthly_Debt_Obligations__c</fullName>
        <label>Other Monthly Debt Obligations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Real_Estate__c</fullName>
        <label>Other Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Credit Report for the consumer</description>
        <label>Personal Credit Report</label>
        <referenceTo>LASERCA__Personal_Credit_Report__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Residence__c</fullName>
        <label>Principal Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Occupancy_Statement</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profession_Applicant__c</fullName>
        <label>Applicant Profession</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Co_Applicant__c</fullName>
        <label>Co-Applicant Profession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Postal_Code__c</fullName>
        <label>Property Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Pre_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Pre-Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Pre_qualification_Status__c</fullName>
        <label>Property Pre-qualification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Pre_Qualification_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Property for inquiry</inlineHelpText>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Inquiries</relationshipLabel>
        <relationshipName>Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_Just_Miss_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualifies for Just Miss Pricing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_New_HomeOwner_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualifies for New HomeOwner Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_New_HomeOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualifies for New HomeOwner Pricing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regulatory_Risk__c</fullName>
        <description>Field identifies what type of regulatory risk the complaint poses</description>
        <label>Regulatory Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UDAAP</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
                <value>
                    <fullName>FCRA</fullName>
                </value>
                <value>
                    <fullName>Reputation - Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Privacy/GLBA</fullName>
                </value>
                <value>
                    <fullName>InfoSec</fullName>
                </value>
                <value>
                    <fullName>TCPA</fullName>
                </value>
                <value>
                    <fullName>CAN-SPAM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulatory_Risk_other__c</fullName>
        <description>Field identifies regulatory risk if "Other" is selected</description>
        <label>Regulatory Risk (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Satisfied</fullName>
                </value>
                <value>
                    <fullName>Customer Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>No Customer Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Field identifies the final disposition of the complaint case</description>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed with explanation</fullName>
                </value>
                <value>
                    <fullName>Closed with monetary relief</fullName>
                </value>
                <value>
                    <fullName>Closed with non-monetary relief</fullName>
                </value>
                <value>
                    <fullName>Closed (without relief or explanation)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement_Account__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retirement Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seasoned_Liquid_Assets__c</fullName>
        <label>Seasoned Liquid Assets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_of_Gift_Funds__c</fullName>
        <label>Source of Gift Funds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Source_of_Gift_Funds</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Inquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether property inquiry is for test or demonstration purposes</inlineHelpText>
        <label>Test Inquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Field identifies whether the complaint is a Legal/Regulatory complaint or a Product/Service complaint</description>
        <inlineHelpText>"Tier 1: is for Legal/Regulatory
Tier 2 is for Product/Service complaints"</inlineHelpText>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 – Legal/Regulatory</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 – Product/Service</label>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Mortgage_Debt__c</fullName>
        <label>Total Mortgage Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>